--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-} */
+} 
 
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 
