--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,10 @@
-/* * {
+* {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-} 
-
-/*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
+}
+/*
+! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css
 
 /* Document
    ========================================================================== */
@@ -15,6 +15,7 @@
  */
 
 html {
+  font-size: 14px;
   line-height: 1.15; /* 1 */
   -webkit-text-size-adjust: 100%; /* 2 */
 }
